flux/elastic-logs/namespace.yaml
---
# yamllint disable-line rule:line-length
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/master/master/namespace-v1.json
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-logs
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
