flux/elastic-logs/ingress.yaml
---
# yamllint disable-line rule:line-length
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/master/master/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: elastic-logs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-production
spec:
  ingressClassName: haproxy-tailnet
  rules:
    - host: elasticsearch.${cluster_domain}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: logs-es-http
                port:
                  number: 9200
  tls:
    - hosts:
        - elasticsearch.${cluster_domain}
      secretName: ingress-elasticsearch-tls
